--- a/CrowdSourcing/src/app/globals.css
+++ b/CrowdSourcing/src/app/globals.css
@@ -5,9 +5,11 @@
 :root {
   --primary-color: #7825ff;
   --secondary-color: #ff00c7;
+  --black-color: #121212;
   --on-code: linear-gradient(48deg, var(--primary-color) -94.24%, var(--secondary-color) 93.57%);
-  --on-code-70: linear-gradient(48deg, rgba(120, 37, 255, 0.7) -94.24%, rgba(255,0,199,0.7) 93.57%);
+  --on-code-70: linear-gradient(48deg, hsla(263, 100%, 57%, 0.7) -94.24%, hsla(313, 100%, 50%, 0.7) 93.57%);
   --sub: rgb(121, 128, 139);
   --sub-30: rgba(121, 128, 139, 0.30);
+  --LoginBackgroundColor: linear-gradient(45deg, #4d18a2  , #984391, #ff00c8);
 }
 
